# Jay-RAG-Tools

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  generate_test_pdf.py  pdf_vision_processor.py  requirements.txt
.claude/: git-flow.md
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: config.rs  error.rs  lib.rs  metadata.rs  pdf.rs  processor.rs  progress.rs  prompts.rs  table.rs  trash.rs
crates/core/src/provider/: anthropic.rs  mod.rs  ollama.rs  openai.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  error.rs  lib.rs  notifications.rs  state.rs  ws.rs
crates/server/src/deploy/: anythingllm.rs  flowise.rs  images.rs  markdown.rs  mod.rs
crates/server/src/jobs/: mod.rs  models.rs  queue.rs  runner.rs
crates/server/src/routes/: clean.rs  config.rs  deploy.rs  export.rs  images.rs  jobs.rs  markdown.rs  mod.rs  pdf.rs  results.rs  settings.rs  upload.rs
crates/storage/: Cargo.toml
crates/storage/src/: error.rs  lib.rs  local.rs  nfs.rs  s3.rs  traits.rs
docs/: anythingllm-integration.md  dify-integration.md  flowise-integration.md  langflow-integration.md
frontend/: .gitignore  next.config.ts  package-lock.json  package.json  playwright.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/jobs/: page.tsx
frontend/app/jobs/[id]/: page.tsx
frontend/app/results/[id]/: page.tsx
frontend/app/review/[id]/: page.tsx
frontend/app/settings/: page.tsx
frontend/app/upload/: page.tsx
frontend/components/: DeployModal.tsx  ElapsedTimer.tsx  ImageGallery.tsx  InlineSectionEditor.tsx  JobList.tsx  JobProgress.tsx  MarkdownEditor.tsx  MarkdownViewer.tsx  PdfViewer.tsx  PipelineConfig.tsx  SearchBar.tsx  SectionPanel.tsx  SortableSectionCard.tsx  TrashPanel.tsx  UploadForm.tsx
frontend/e2e/: dashboard.spec.ts  deploy.spec.ts  dpi-hint.spec.ts  enhance-toggle.spec.ts  jobs-list.spec.ts  review-improvements.spec.ts  review-page.spec.ts  screenshots.spec.ts
frontend/hooks/: useJobs.ts  useKeyboardShortcuts.ts  useSettings.ts  useWebSocket.ts
frontend/lib/: api.ts  format.ts  markdownSections.ts  types.ts
src/: __init__.py  main.py  processor.py  prompts.py
src/providers/: __init__.py  base.py  claude_provider.py  ollama_provider.py  openai_provider.py
