[workspace]
members = [
    "crates/core",
    "crates/storage",
    "crates/server",
    "crates/cli",
]
resolver = "2"

[workspace.package]
version = "2.0.0"
edition = "2024"
license = "MIT"
authors = ["Jay"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Base64
base64 = "0.22"

# Internal crates
jay-rag-core = { path = "crates/core" }
jay-rag-storage = { path = "crates/storage" }
jay-rag-server = { path = "crates/server" }
