[package]
name = "jay-rag-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "CLI binary for JAY-RAG-TOOLS"

[[bin]]
name = "jay-rag"
path = "src/main.rs"

[dependencies]
# CLI framework
clap = { version = "4", features = ["derive"] }

# Progress bars
indicatif = "0.17"

# Async
tokio = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Web server (for serve command)
axum = { version = "0.8" }

# Internal
jay-rag-core = { workspace = true }
jay-rag-storage = { workspace = true }
jay-rag-server = { workspace = true }
