[package]
name = "jay-rag-server"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Axum API server for JAY-RAG-TOOLS"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["multipart", "ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs", "limit"] }

# Async
tokio = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# UUID
uuid = { workspace = true }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Internal
jay-rag-core = { workspace = true }
jay-rag-storage = { workspace = true }
