[package]
name = "jay-rag-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Storage abstraction layer for JAY-RAG-TOOLS"

[dependencies]
# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# AWS S3
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }
